Pilas con arreglo de enteros hecha

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-
 practica-2/cdlist/cdlist.o
 practica-2/cdlist/main
 .vscode/tasks.json
+practica-3/arregloenteros.o
+practica-3/arregloenteros.o
+practica-3/main
+.gitignore
