Corrección de funciones hasta btree_altura

--- a/practica-4/btree/makefile
+++ b/practica-4/btree/makefile
@@ -2,11 +2,11 @@ CC := gcc
 CFLAGS := -Wall -Werror -Wextra
 
 programa: test.o btree.o
-	$(CC) -o $@ $^ $(CFLAGS)
+	$(CC) -g -o $@ $^ $(CFLAGS) 
 	rm *.o
 
 test.o: test.c btree.h
-	$(CC) -c $< $(CFLAGS)
+	$(CC) -g -c $< $(CFLAGS)
 
 btree.o: btree.c btree.h
-	$(CC) -c $< $(CFLAGS)
+	$(CC) -g -c $< $(CFLAGS)
